---------------------------------------------------------------------------------------------------
Version: 0.69.10
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.9
Date: 2025-05-15
  Changes:
    - Loader compatibility
    - Minor lore change.
    - Fixed error messaging for splitter ghosts.
    - Added more warning to first journey.
---------------------------------------------------------------------------------------------------
Version: 0.69.7
Date: 2025-05-14
  Changes:
    - Moshine compatibility.
    - Starmap fix
---------------------------------------------------------------------------------------------------
Version: 0.69.6
Date: 2025-05-14
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.5
Date: 2025-05-14
  Balancing:
    - Elec engine recipe made easier.
  Minor Features:
    - More lore
    - I'm really just testing out FMTK's publish.
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 3. 28. 2025
  Major Features:
    - Test from early commit
  Bugfixes:
    - Also a test
      ► Bullet
      ► Bullet2
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 3. 28. 2025
  Bugfixes:
    - Also a test