@@ -319,8 +319,12 @@ wind_correction_notification=The wind turned your machine!
 wind_block_notification=The wind blocked this orientation!
 
 pre-rubia-cutscene-prepared=You feel prepared for Rubia, but is Rubia prepared for you?
-pre-rubia-cutscene-unprepared=You have a sinking feeling that you are not prepared for Rubia--like there is something critical that you forgot to read before leaving.
-pre-rubia-cutscene-unprepared-part2=You feel a shiver down your spine: this journey will end in certain death.
+pre-rubia-cutscene-unprepared=You have a sinking feeling that you are insufficiently armed for Rubia--like there is something critical that you forgot to read before leaving.
+pre-rubia-cutscene-unprepared-naked=You feel a shiver down your spine. You are totally naked, and this journey will end in certain death.
+pre-rubia-cutscene-unprepared-low-shield=You feel almost naked. You have nowhere near enough protection to land on Rubia alive.
+pre-rubia-cutscene-unprepared-medium-shield=You feel like you only have around half of the gear you need to land on Rubia without dying.
+pre-rubia-cutscene-unprepared-almost-shield=You feel like you are just barely falling short of what you need to land on Rubia without dying.
+
 ;⚠️ = [img=utility/warning_icon]
 landing-cutscene-part1=[img=utility/danger_icon] Hull compromised
 landing-cutscene-part2=[img=utility/danger_icon] Landing thrusters destroyed
@@ -383,6 +387,6 @@ rubia-trashsteroid-tips=Rubia trashsteroid mechanics
 rubia-wind-tips=Rubia wind mechanics
 
 [tips-and-tricks-item-description]
-rubia-briefing=[planet=rubia] is a windy trash planet with hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. You'll receive more details upon arrival.\n [img=utility/warning_icon][img=utility/warning_icon] WARNING! [img=utility/warning_icon][img=utility/warning_icon]  Cargo pods and rockets carrying people/cargo will suffer SEVERE impact damage upon entering/exiting Rubian airspace. Damage-free transport requires [technology=rubia-project-trashdragon]/[technology=planetslib-rubia-cargo-drops]. Without them, anyone landing would need to be able to withstand a LARGE amount of damage to land.\nHint: Researching [technology=planet-discovery-rubia] means you can already craft everything you need.
+rubia-briefing=[img=utility/warning_icon][img=utility/warning_icon][color=250,250,0][font=default-semibold]WARNING![/font][/color][img=utility/warning_icon][img=utility/warning_icon]  Cargo pods and rockets carrying people/cargo will suffer SEVERE impact damage upon entering/exiting Rubian airspace. Damage-free transport requires [technology=rubia-project-trashdragon]/[technology=planetslib-rubia-cargo-drops]. Without them, [color=250,250,0][font=default-semibold]YOU WILL DIE UPON LANDING[/font][/color] unless you can withstand a large amount of impact damage.\n\n[planet=rubia] is a windy trash planet with hurricane-force winds. The wind restricts the orientation of several entities, and will constantly barrage the surface with trashsteroids. The planet is covered in resource-rich scrap, which can be converted to useful materials using microbes in a [entity=biorecycling-plant]. You'll receive more details upon arrival.\n\nHint: Researching [technology=planet-discovery-rubia] means you can already craft everything you need.
 rubia-trashsteroid-tips=Trashsteroids are ever-present threats on Rubia:\n   • [entity=medium-trashsteroid] will bombard your base, and require turrets to defend against.\n   • [entity=cargo-pod] will suffer SEVERE impact damage upon entry, without [technology=planetslib-rubia-cargo-drops].\n   • [entity=rocket-silo] cannot safely launch rockets without [technology=rubia-project-trashdragon].\n   • [entity=garbo-grabber] can only collect [item=craptonite-chunk] from trashsteroids destroyed by physical/explosive damage within their range.\n   • [technology=physical-projectile-damage-1]/[technology=weapon-shooting-speed-1]/etc will make [entity=medium-trashsteroid] bulkier. Higher tech levels still give you a substantial advantage--just not as massive of an advantage as you would expect.
 rubia-wind-tips=Eastward winds will have the following effects:\n   • [entity=inserter] and [entity=splitter] can only move items to the right.\n   • [entity=transport-belt], [entity=underground-belt], and [entity=electric-mining-drill] cannot move items to the left.\n   • [entity=logistic-robot] cannot safely navigate to [entity=requester-chest], [entity=buffer-chest], [entity=active-provider-chest], or [entity=rocket-silo].\n   • [entity=locomotive], [entity=cargo-wagon], [entity=recycler], and related cannot withstand the wind.\n   • Some entities are immune to bombardment, such as [item=rail], [entity=rail-signal], [entity=rubia-armored-locomotive], related entities, and any entity made with [item=craptonite-frame].\n   • [entity=rubia-wind-turbine] will generate power.
