@@ -2,6 +2,7 @@
 Version: 0.69.10
 Date: ????
   Changes:
+    - Scaling warning messages
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.9
 Date: 2025-05-15
